# dotfiles

./: ..gitignore.un~  ..gitmodules.un~  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AutoHotkey.ahk  README.md  TabSessionManager_Settings.json  advantage2.kbd  automate_qa  compiz.profile  configs-treestyletab@piro.sakura.ne.jp.json  crontab-l  diff-zprezto  editrc.symlink  finicky.js.symlink  foxyGestures.json  hpodder-lscasts-l  ignition style.xml  ignition-style.xml  inputrc.symlink  justfile  justfile.symlink  kanata.kbd  manual-steps.md  mimeapps.list.configsymlink  myvimrc  r2elist  result  screenrc.symlink  tmux.conf.symlink  tool-versions.symlink  utpujt.plist  vimium-options.json
.jjconflict-base-0/: screenrc.symlink  tool-versions.symlink
.jjconflict-base-0/xwindow/osd/: pyproject.toml
.jjconflict-side-0/: AGENTS.md  AutoHotkey.ahk
.jjconflict-side-1/: .gitattributes  .gitignore  AGENTS.md  ignition style.xml  justfile.symlink  vim.symlink
albert.configsymlink/: config
asdf/: asdf.zsh
autostart.configsymlink/: swap-mouse-buttons.desktop
aws/: default.zsh
bat/: bat.zsh
brew/: install.sh  path.zsh  path.zsh.disabled  zsh.zsh
config/: kglobalshortcutsrc  plasma-org.kde.plasma.desktop-appletsrc.configsymlink
docs/: agent-tts-guide.md
etc/: auto.misc  auto.smb.capictor  fstab  wsl.conf
etc-old/: mpd.conf
feedly/: CHANGELOG.md  categorise-feeds.md  feedly-feeds  feedly-opml  feedly_categorized.opml  feedly_feeds.csv  feedly_feeds.jsonl  feedly_log.txt  flake.nix  jsonl-to-opml
firefox/: TabSessionManager_Settings.json  launcher.sh  (+5 more)
(+1424 files in other folders)
